Now able to install globally

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "skelly.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./main.js"
+    "start": "node ./bin/skelly.js"
+  },
+  "bin": {
+    "skelly": "bin/skelly.js"
   },
   "author": "Brandon Wilcox",
   "license": "ISC",
