Added Python template

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skelly",
+  "name": "skelli",
   "version": "1.0.0",
   "description": "A tool for creating templated files",
   "main": "skelly.js",
