--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "skelli": "bin/skelli.js"
   },
   "author": "Brandon Wilcox",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "minimist": "^1.2.0",
     "underscore": "^1.8.3"
+  },
+  "repository": {
+    "type" : "git"
+  , "url" : "https://github.com/bkwilcox100/Skelli.git"
   }
 }
